调整流水线的包结构，添加部分API