@@ -1,6 +1,7 @@
 package com.oyealex.pipe.basis;
 
 import com.oyealex.pipe.PipeTestBase;
+import com.oyealex.pipe.basis.api.Pipe;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
@@ -63,7 +64,8 @@ class PipeConcatTest extends PipeTestBase {
     @Test
     @DisplayName("能够正确地拼接迭代器中地元素到流水线尾部，原流水线经过了map操作")
     void should_append_elements_from_iterator_into_tail_of_pipe_rightly_with_map_operation_in_current_pipe() {
-        List<String> res = of(ELEMENTS).peek(value -> {}).map(value -> value.repeat(2)).append(spliterator(OTHER_ELEMENTS, 0)).toList();
+        List<String> res = of(ELEMENTS).peek(value -> {}).map(value -> value.repeat(2))
+            .append(spliterator(OTHER_ELEMENTS, 0)).toList();
         assertEquals(concat(stream(ELEMENTS).map(value -> value.repeat(2)), stream(OTHER_ELEMENTS)).collect(toList()),
             res);
     }
@@ -71,15 +73,18 @@ class PipeConcatTest extends PipeTestBase {
     @Test
     @DisplayName("能够正确地拼接迭代器中地元素到流水线头部，新流水线经过了limit操作")
     void should_prepend_elements_from_iterator_into_head_of_pipe_rightly_with_limit_in_new_pipe() {
-        List<String> res = of(ELEMENTS).prepend(spliterator(OTHER_ELEMENTS, 0)).limit(OTHER_ELEMENTS.length + 3).toList();
-        assertEquals(concat(stream(OTHER_ELEMENTS), stream(ELEMENTS)).limit(OTHER_ELEMENTS.length + 3).collect(toList()),
+        List<String> res = of(ELEMENTS).prepend(spliterator(OTHER_ELEMENTS, 0)).limit(OTHER_ELEMENTS.length + 3)
+            .toList();
+        assertEquals(
+            concat(stream(OTHER_ELEMENTS), stream(ELEMENTS)).limit(OTHER_ELEMENTS.length + 3).collect(toList()),
             res);
     }
 
     @Test
     @DisplayName("能够正确地拼接迭代器中地元素到流水线尾部，新流水线经过了limit操作")
     void should_append_elements_from_iterator_into_tail_of_pipe_rightly_with_limit_in_new_pipe() {
-        List<String> res = of(ELEMENTS).peek(value -> {}).append(spliterator(OTHER_ELEMENTS, 0)).limit(ELEMENTS.length + 3).toList();
+        List<String> res = of(ELEMENTS).peek(value -> {}).append(spliterator(OTHER_ELEMENTS, 0))
+            .limit(ELEMENTS.length + 3).toList();
         assertEquals(concat(stream(ELEMENTS), stream(OTHER_ELEMENTS)).limit(ELEMENTS.length + 3).collect(toList()),
             res);
     }
